language/move-compiler/tests/move_check/translate/module_in_expression_seq.move
module M {
    public fun foo() {
        module F { }
    }
}
